# QED-Cascade

./: .gitignore  CMakeLists.txt  README.md  main.cpp  pyproject.toml  sample_conf.conf  setup.py
Data/: xml_writter.py
Docs/: todo.txt
Source/Exec/: CMakeLists.txt  QEDCASC.cpp
Source/Geant/: CMakeLists.txt  G4CascadeGenerator.cpp  G4CascadeGenerator.hh  G4CascadeTF.cpp  G4CascadeTF.hh  G4NonLinearCompton.cpp  G4NonLinearCompton.hh  G4QEDProcess.hh  G4StochasticEmission.cpp  G4StochasticEmission.hh  TensorflowGraph.cpp  TensorflowGraph.hh  doc.txt
Source/Geant/Tensorflow/: TensorflowGraph.cpp  TensorflowGraph.hh
Source/IO/: CMakeLists.txt
Source/IO/Input/: FileParser.cpp  FileParser.hh  INIReader.cpp  INIReader.hh
Source/IO/Output/: HDF5Output.cpp  HDF5Output.hh  Histogram.cpp  Histogram.hh  OutputManager.cpp  OutputManager.hh
Source/Particles/: CMakeLists.txt  Lepton.cpp  Lepton.hh  Particle.cpp  Particle.hh  ParticleList.cpp  ParticleList.hh  Photon.cpp  Photon.hh  SourceGenerator.cpp  SourceGenerator.hh
Source/Physics/: CMakeLists.txt  LaserField.cpp  LaserField.hh  NonLinearCompton.cpp  NonLinearCompton.hh  ParticlePusher.cpp
Source/Physics/Fields/: Field.hh  LaserField.cpp  LaserField.hh  PlaneField.cpp  PlaneField.hh  StaticField.cpp  StaticField.hh
Source/Physics/Fields/EMField/: EMField.hh  FocusingField.cpp  FocusingField.hh  GaussianEMField.cpp  GaussianEMField.hh  PlaneEMField.cpp  PlaneEMField.hh  StaticEMField.cpp  StaticEMField.hh
Source/Physics/Fields/RadiationField/: RadField.hh  ThermalRadField.cpp  ThermalRadField.hh
Source/Physics/ParticlePushers/: LandauPusher.cpp  LandauPusher.hh  LorentzPusher.cpp  LorentzPusher.hh  ModifiedLandauPusher.cpp  ModifiedLandauPusher.hh  ParticlePusher.cpp  ParticlePusher.hh
Source/Physics/Processes/: ContinuousEmission.cpp  ContinuousEmission.hh  GenerateTables.cpp  GenerateTables.hh  LandauLifshitz.hh  LinearBW.cpp  LinearBW.hh  NonLinearBreitWheeler.cpp  NonLinearBreitWheeler.hh  NonLinearCompton.cpp  NonLinearCompton.hh  PhotonEmission.cpp  PhotonEmission.hh  Process.cpp  Process.hh  StochasticEmission.cpp  StochasticEmission.hh  ThermalBW.cpp  ThermalBW.hh
Source/Python/: CMakeLists.txt  QEDCascPy-Bindings.cpp  RunManager.cpp  RunManager.hh  test.cpp
Source/Python/QEDCascPy/: __init__.py
Source/Tools/: CMakeLists.txt  MCTools.cpp  MCTools.hh  Numerics.cpp  Numerics.hh  ThreeVector.hh  UnitsSystem.cpp  UnitsSystem.hh
Tables/: e_split.table  e_split_old.table  epsilon.table  hsokolov.table  log_chi.table  pairprod.table  rate.table  rateChiEta.table
Tests/: BWTest.cpp  BreitWheelerTest.cpp  CMakeLists.txt  ComptonTest.cpp  GeantTest.cpp  InputTest.cpp  LaserTest.cpp  MainTest.cpp  PusherTest.cpp  tfTest.cpp
example/: QEDCascPy_example.py  example.ini  test.py
include/: Constants.hh  HDF5Output.hh  INIReader.hh  LaserField.hh  MCTools.hh  NonLinearCompton.hh  Numerics.hh  Particle.hh  ParticleList.hh  ParticlePusher.hh  RadiationReaction.hh  ThreeVector.hh  UnitsSystem.hh  Vector.hh
source/: HDF5Output.cpp  INIReader.cpp  LaserField.cpp  MCTools.cpp  NonLinearCompton.cpp  Numerics.cpp  Particle.cpp  ParticleList.cpp  ParticlePusher.cpp  UnitsSystem.cpp  ini.cpp
source/Exec/: CMakeLists.txt  QEDCASC.cpp
source/IO/: CMakeLists.txt
source/Particles/: CMakeLists.txt
source/Physics/: CMakeLists.txt  LaserField.cpp  NonLinearCompton.cpp
source/Tools/: CMakeLists.txt  MCTools.hh  ThreeVector.hh
