ADD_EXECUTABLE(Compton ComptonTest.cpp)
ADD_EXECUTABLE(breitwheeler BreitWheelerTest.cpp)
ADD_EXECUTABLE(Pusher PusherTest.cpp)
ADD_EXECUTABLE(Laser LaserTest.cpp)
ADD_EXECUTABLE(File InputTest.cpp)
ADD_EXECUTABLE(Main MainTest.cpp)
ADD_EXECUTABLE(Geant GeantTest.cpp)
ADD_EXECUTABLE(Tool ToolTest.cpp)
ADD_EXECUTABLE(TF tfTest.cpp)
ADD_EXECUTABLE(ffield focussing-Test.cpp)

TARGET_LINK_LIBRARIES(Compton Tools IO Particles PhysicsQED)
TARGET_LINK_LIBRARIES(Pusher Tools IO Particles PhysicsQED)
TARGET_LINK_LIBRARIES(Laser Tools IO Particles PhysicsQED)
TARGET_LINK_LIBRARIES(File Tools IO)
TARGET_LINK_LIBRARIES(Main Tools IO Particles PhysicsQED)
TARGET_LINK_LIBRARIES(breitwheeler Tools IO Particles PhysicsQED)
TARGET_LINK_LIBRARIES(Geant GeantQED)
TARGET_LINK_LIBRARIES(Tool Tools)
TARGET_LINK_LIBRARIES(TF GeantQED)
TARGET_LINK_LIBRARIES(ffield Tools IO Particles PhysicsQED)
